--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,5 +63,5 @@
 /*home*/
 
 .home_title{
-  @apply text-4xl font-bold font-bodoni w-1/2 text-center tracking-wider leading-normal;
+  @apply text-4xl font-bold font-bodoni md:w-1/2 text-center tracking-wider leading-normal;
 }
