--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,10 +15,10 @@
 }
 
 .nav-item-principal{
-  @apply md:text-black text-sm  font-certia;
+  @apply md:text-black text-sm  font-certia hover:bg-transparent !important;
 }
 .nav-item{
-  @apply xl:text-white text-sm font-certia md:text-black text-white md:hover:text-black md:hover:bg-white rounded-none p-2;
+  @apply md:text-white text-sm font-certia sm:text-black text-white xl:hover:text-black xl:hover:bg-white rounded-none p-2;
 }
 
 .submenuitem{
