--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,7 +63,7 @@
 /*home*/
 
 .home_title{
-  @apply md:text-4xl text-xl font-bold font-garamond text-center tracking-wider leading-normal;
+  @apply md:text-4xl text-xl font-semibold font-garamond text-center tracking-wider md:leading-10;
 }
 
 /* line button */
@@ -100,12 +100,26 @@
 
 /* group */
 .group_container{
-  @apply  bg-cover bg-center bg-no-repeat md:flex-grow h-52 flex items-start justify-center relative md:w-full w-1/2 cursor-pointer;
+  @apply  bg-cover bg-center bg-no-repeat md:flex-grow flex items-start justify-center relative md:w-full w-1/2 cursor-pointer;
 }
 
 /* highlight */
 .highlight_container{
-  @apply bg-cover bg-center bg-no-repeat md:flex-grow h-52 flex items-end justify-end relative md:w-full w-1/2 cursor-pointer;
+  @apply bg-cover bg-center bg-no-repeat md:flex-grow flex items-end justify-end relative md:w-full w-1/2 cursor-pointer;
+}
+
+@media screen and (max-width: 1024px) {
+  .highlight_container, .group_container{
+    aspect-ratio: 1/1;
+    
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .highlight_container, .group_container{
+    @apply w-1/2 h-52;
+  }
+  
 }
 
 /* animation */
