--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,6 +60,10 @@
   @apply outline-none bg-transparent !important;
 }
 
+.menu_item_mobile{
+  @apply block active:bg-transparent text-black !important;
+}
+
 /*home*/
 
 .home_title{
@@ -133,7 +137,7 @@
 /* top texts */
 
 .top_text{
-  @apply p-[2px] font-certia text-sm text-black md:absolute top-2 left-0 border-b-[1px] border-black w-3/4 tracking-wide italic md:block hidden;
+  @apply pl-2 font-certia text-sm text-black md:absolute top-3 left-0 border-b-[1px] border-black w-3/4 tracking-wide italic md:block hidden;
 }
 
 /* animation */
