--- a/styles/globals.css
+++ b/styles/globals.css
@@ -121,14 +121,7 @@
   @apply flex md:flex-col md:basis-[20%] md:flex-nowrap flex-wrap relative md:pt-10;
 }
 .highlight_container{
-  @apply bg-cover bg-center bg-no-repeat md:flex-grow flex items-end justify-end relative md:w-full w-1/2 cursor-pointer;
-}
-
-@media screen and (max-width: 1024px) {
-  .highlight_container, .group_container{
-    aspect-ratio: 1/1;
-    
-  }
+  @apply bg-cover bg-center bg-no-repeat md:flex-grow flex items-end justify-end relative md:w-full w-1/2 cursor-pointer md:h-[14.3%];
 }
 
 @media screen and (max-width: 640px) {
