--- a/styles/globals.css
+++ b/styles/globals.css
@@ -157,3 +157,9 @@
 .custom_card_line{
   @apply absolute inset-1 border-[1px] border-white rounded-xl pointer-events-none;
 }
+
+/* pages info */
+
+.container_page{
+  @apply flex flex-col items-center md:gap-10 gap-8 md:pt-20 pt-10 pb-40 md:px-0 px-8 relative;
+}
