--- a/styles/globals.css
+++ b/styles/globals.css
@@ -161,5 +161,5 @@
 /* pages info */
 
 .container_page{
-  @apply flex flex-col items-center md:gap-10 gap-8 md:pt-20 pt-10 pb-40 md:px-0 px-8 relative;
+  @apply flex flex-col items-center md:gap-10 gap-8 md:pt-20 pt-10 pb-40 md:px-0 relative;
 }
