--- a/styles/globals.css
+++ b/styles/globals.css
@@ -211,3 +211,8 @@
   }
   
 }
+
+/* card partners */
+.partners_card_container {
+  @apply relative bg-black text-white px-10 py-14 rounded-xl drop-shadow-2xl shadow-xl w-full md:w-auto;
+}
