--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,7 +18,7 @@
   @apply md:text-black text-sm  font-certia hover:bg-transparent !important;
 }
 .nav-item{
-  @apply md:text-white text-sm font-certia sm:text-black text-white xl:hover:text-black xl:hover:bg-white rounded-none;
+  @apply md:text-white md:text-sm text-lg font-certia sm:text-black text-white xl:hover:text-black xl:hover:bg-white rounded-none;
 }
 
 .submenuitem{
@@ -36,6 +36,20 @@
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
     border-top: 10px solid #fff; 
+    clip-path: polygon(50% 100%, 0 0, 100% 0);
+}
+
+.menu-vertical::after{
+  content: '';
+    position: absolute;
+    left: 20%;
+    top: 0%;
+    transform: translateX(-50%);
+    width: 0;
+    height: 0;
+    border-left: 12px solid transparent;
+    border-right: 12px solid transparent;
+    border-top: 12px solid #fff; 
     clip-path: polygon(50% 100%, 0 0, 100% 0);
 }
 
@@ -66,6 +80,10 @@
 
 .menu_item_desktop{
   @apply block active:text-black border-none active:bg-white rounded-none !important;
+}
+
+.menu_items_animated{
+  @apply bg-black text-white fixed z-20 h-screen w-full p-10 bottom-0 left-0 transform transition-transform duration-500 ease-in-out;
 }
 
 /*home*/
@@ -213,6 +231,10 @@
 }
 
 /* card partners */
+
+.partners_main{
+  @apply grid lg:grid-cols-2 gap-10 xl:px-40 md:px-20;
+}
 .partners_card_container {
   @apply relative bg-black text-white px-10 py-14 rounded-xl drop-shadow-2xl shadow-xl w-full md:w-auto;
 }
