--- a/styles/globals.css
+++ b/styles/globals.css
@@ -83,7 +83,7 @@
 }
 
 .menu_items_animated{
-  @apply bg-black text-white fixed z-20 h-screen w-full p-10 bottom-0 left-0 transform transition-transform duration-500 ease-in-out;
+  @apply bg-black text-white fixed z-20 h-screen w-full p-10 top-0 left-0 transform transition-transform duration-500 ease-in-out;
 }
 
 /*home*/
