--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,7 +98,7 @@
 }
 
 .line-buttoncontainer{
-  @apply flex items-center justify-center gap-4;
+  @apply flex items-center justify-center gap-4 bg-transparent;
 }
 
 /* title text */
