--- a/styles/globals.css
+++ b/styles/globals.css
@@ -242,3 +242,13 @@
 .partners_card_container {
   @apply relative bg-black text-white px-10 py-14 rounded-xl drop-shadow-2xl shadow-xl w-full md:w-auto;
 }
+
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; 
+}
+
+* {
+  scrollbar-width: none;
+}
+
