--- a/styles/globals.css
+++ b/styles/globals.css
@@ -243,6 +243,19 @@
   @apply relative bg-black text-white px-10 py-14 rounded-xl drop-shadow-2xl shadow-xl w-full md:w-auto;
 }
 
+/* blogitem */
+.blogitem{
+  @apply flex flex-col gap-4;
+}
+
+.blogitem h1, .blogitem h2, .blogitem h3, .blogitem h4, .blogitem h5, .blogitem h6{
+  @apply text-start;
+}
+
+.blogitem img{
+  @apply w-full h-[400px] md:object-contain object-cover align-middle md:px-20;
+}
+
 ::-webkit-scrollbar {
   width: 0px;
   background: transparent; 
